--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "nunjucks": "^3.2.4",
     "plugin-error": "^2.0.1",
     "path": "^0.12.7",
-    "sass-embedded": "1.77.5"
+    "sass-embedded": "1.77.5",
+    "luxon": "^3.7.1"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
