--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nhsuk-prototype-kit",
-  "version": "7.0.0",
+  "version": "7.0.1",
   "description": "Rapidly create HTML prototypes of NHS websites and services.",
   "main": "app.js",
   "scripts": {
@@ -21,6 +21,9 @@
   "author": "https://github.com/nhsuk/",
   "license": "MIT",
   "dependencies": {
+
+    "luxon": "^3.7.1",
+
     "@babel/core": "^7.28.3",
     "@babel/preset-env": "^7.28.3",
     "@inquirer/prompts": "^7.5.3",
@@ -28,7 +31,7 @@
     "browser-sync": "^3.0.4",
     "client-sessions": "^0.8.0",
     "cookie-parser": "^1.4.7",
-    "dotenv": "^17.2.1",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "gulp": "^5.0.1",
@@ -44,22 +47,21 @@
     "path": "^0.12.7",
     "plugin-error": "^2.0.1",
     "portscanner": "^2.2.0",
-    "sass-embedded": "1.77.5",
-    "luxon": "^3.7.1"
+    "sass-embedded": "1.77.5"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.41.0",
-    "@typescript-eslint/parser": "^8.41.0",
+    "@typescript-eslint/eslint-plugin": "^8.42.0",
+    "@typescript-eslint/parser": "^8.42.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-jest-dom": "^5.5.0",
-    "eslint-plugin-jsdoc": "^54.1.1",
+    "eslint-plugin-jsdoc": "^54.3.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.6.0",
-    "jest": "^30.0.5",
+    "jest": "^30.1.3",
     "prettier": "^3.6.2"
   },
   "engines": {
